--- a/membercard/res/values/strings.xml
+++ b/membercard/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Hello World, mainActivity!</string>
-    <string name="app_name">Membercard</string>
+    <string name="app_name">Member Card</string>
 
 </resources>
